<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:id="@+id/scroll">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
<!--      <com.littlered.conclusion.TitleLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>-->

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

          <RelativeLayout
              android:id="@+id/profile_img_frag"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/text_blue">


              <ImageView
                  android:id="@+id/h_back"
                  android:layout_width="match_parent"
                  android:layout_height="200dp" />

              <ImageView
                  android:id="@+id/iv_h_head"
                  android:layout_width="80dp"
                  android:layout_height="80dp"
                  android:layout_centerInParent="true"
                  android:src="@mipmap/ic_launcher" />

              <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignBottom="@id/h_back"
                  android:layout_marginBottom="20dp"
                  android:orientation="horizontal">

                  <ImageView
                      android:id="@+id/user_line"
                      android:layout_width="1dp"
                      android:layout_height="25dp"
                      android:layout_centerHorizontal="true"
                      android:layout_marginLeft="15dp"
                      android:background="@color/white" />

                  <TextView
                      android:id="@+id/user_name"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_toLeftOf="@id/user_line"
                      android:gravity="center"
                      android:text="张三"
                      android:textColor="@color/white"
                      android:textSize="17sp" />

              </RelativeLayout>

          </RelativeLayout>

          <LinearLayout
              android:id="@+id/ly_detail"
              android:layout_width="match_parent"
              android:layout_height="64dp"
              android:orientation="horizontal">

              <TextView
                  android:id="@+id/tv_profile_friends"
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@drawable/tab_menu_bg"
                  android:drawablePadding="2dp"
                  android:drawableTop="@mipmap/profile_menu_friends_normal"
                  android:gravity="center"
                  android:padding="6dp"
                  android:text="@string/profile_menu_friend"
                  android:textColor="@color/text_gray"
                  android:textSize="12sp" />

              <TextView
                  android:id="@+id/tv_profile_collect"
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@drawable/tab_menu_bg"
                  android:drawablePadding="2dp"
                  android:drawableTop="@mipmap/profile_menu_collect_normal"
                  android:gravity="center"
                  android:padding="6dp"
                  android:text="@string/profile_menu_collect"
                  android:textColor="@color/text_gray"
                  android:textSize="12sp" />

              <TextView
                  android:id="@+id/tv_profile"
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@drawable/tab_menu_bg"
                  android:drawablePadding="2dp"
                  android:drawableTop="@mipmap/profile_menu_history_normal"
                  android:gravity="center"
                  android:padding="6dp"
                  android:text="@string/tab_menu_home"
                  android:textColor="@color/text_gray"
                  android:textSize="12sp" />

              <TextView
                  android:id="@+id/tv_profile_info"
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@drawable/tab_menu_bg"
                  android:drawablePadding="2dp"
                  android:drawableTop="@mipmap/profile_menu_info_normal"
                  android:gravity="center"
                  android:padding="6dp"
                  android:text="@string/profile_menu_information"
                  android:textColor="@color/text_gray"
                  android:textSize="12sp" />
          </LinearLayout>

          <View
              android:layout_width="match_parent"
              android:layout_height="2dp"
              android:background="@color/view_gray" />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/bg_black"
              android:orientation="vertical">

              <TextView
                  android:id="@+id/tv_profile_share"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@drawable/tab_menu_bg"
                  android:drawableLeft="@mipmap/profile_menu_share"
                  android:drawablePadding="2dp"
                  android:gravity="left"
                  android:padding="3dp"
                  android:text="@string/profile_menu_share"
                  android:textColor="@color/text_gray"
                  android:textSize="26sp" />

              <View
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="@color/view_gray" />

              <TextView
                  android:id="@+id/tv_profile_play"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@drawable/tab_menu_bg"
                  android:drawableLeft="@mipmap/profile_menu_play"
                  android:drawablePadding="2dp"
                  android:gravity="left"
                  android:padding="3dp"
                  android:text="@string/profile_menu_play"
                  android:textColor="@color/text_gray"
                  android:textSize="26sp" />

              <View
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="@color/view_gray" />

              <TextView
                  android:id="@+id/tv_profile_history"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@drawable/tab_menu_bg"
                  android:drawableLeft="@mipmap/profile_menu_setting"
                  android:drawablePadding="2dp"
                  android:gravity="left"
                  android:padding="3dp"
                  android:text="@string/profile_menu_setting"
                  android:textColor="@color/text_gray"
                  android:textSize="26sp" />

          </LinearLayout>

          <View
              android:layout_width="match_parent"
              android:layout_height="2dp"
              android:background="@color/view_gray" />

      </LinearLayout>
  </LinearLayout>
</ScrollView>